--- a/rocker_tidyverse_plus_DE_pckages/Dockerfile
+++ b/rocker_tidyverse_plus_DE_pckages/Dockerfile
@@ -11,5 +11,6 @@ RUN R -e 'BiocManager::install(ask = F)' && R -e 'BiocManager::install(c("magick
 "kableExtra", "gridExtra", "clusterProfiler", "gProfileR", "statmod", \
 "ggbio", "vqv/ggbiplot", "thomasp85/patchwork","recount", "plyranges", \
 "rbamtools", "annotatr", "tximport", "VennDiagram", "PerformanceAnalytics", \
-"GO.db", "corrplot", "jsonlite", "here", "rlist", ask = F))' && R -e 'tinytex::install_tinytex()' \
+"GO.db", "corrplot", "jsonlite", "here", "rlist", \
+"msa", "DECIPHER", ask = F))' && R -e 'tinytex::install_tinytex()' \
 && R -e 'BiocManager::install(ask = F)'
