rocker tidyverse add packages for Expression atlas analysis

--- a/rocker_tidyverse_plus_DE_pckages/Dockerfile
+++ b/rocker_tidyverse_plus_DE_pckages/Dockerfile
@@ -1,8 +1,12 @@
-FROM bioconductor/bioconductor_docker:RELEASE_3_13
+FROM bioconductor/bioconductor_docker:RELEASE_3_14
 
-RUN apt-get update && R -e 'BiocManager::install(ask = F)' && R -e 'BiocManager::install(c("magick", \
+RUN apt-get update && \
+R -e 'BiocManager::install(ask = F)' && \
+R -e 'BiocManager::install(c("magick", \
 "tidyverse", "vroom", "devtools", "wesanderson", "ggpmisc", "ggseqlogo", \
-"hexbin", "pheatmap", "RColorBrewer", "ComplexHeatmap", "circlize", "gtools", "Rsubread", \
+"hexbin", "pheatmap", "RColorBrewer", "ComplexHeatmap", "circlize", "gtools", \
+"Rsubread", "ExpressionAtlas", "biomaRt", "AnnotationDbi", "EnsDb.Hsapiens.v86",\
+"tidybulk", "tidySummarizedExperiment" \
 "NOISeq", "edgeR", "DESeq2", "derfinder", "derfinderPlot", "regionReport", \
 "EDASeq", "RUVSeq", "sva", "rafalib", "org.Hs.eg.db", "org.Mm.eg.db", \
 "BSgenome.Mmusculus.UCSC.mm10", "TxDb.Mmusculus.UCSC.mm10.knownGene",\
@@ -12,5 +16,6 @@ RUN apt-get update && R -e 'BiocManager::install(ask = F)' && R -e 'BiocManager:
 "recount", "plyranges", \
 "rbamtools", "annotatr", "tximport", "VennDiagram", "PerformanceAnalytics", \
 "GO.db", "corrplot", "jsonlite", "here", "rlist", \
-"msa", "DECIPHER", "tidybulk", ask = F))' && R -e 'tinytex::install_tinytex()' \
-&& R -e 'BiocManager::install(ask = F)'
+"msa", "DECIPHER", "tidybulk", ask = F))' && \
+R -e 'tinytex::install_tinytex()' && \
+R -e 'BiocManager::install(ask = F)'
